button visibility toggles, but dont reload in correct place

--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -11,15 +11,19 @@ body {
   color: white;
   padding: 0.550em 1.25em 0.7em;
   border-radius: 5px;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $button-hover-color;
+    color: white;
+  }
+
+  &:active {
+    background-color: $button-click-color;
+    box-shadow: inset 0 2px 10px hsla(0, 0%, 0%, 0.5);
+  }
 }
 
-.button:hover {
-  cursor: pointer;
-  background-color: $button-hover-color;
-  color: white;
-}
-
-.button:active {
-  background-color: $button-click-color;
-  box-shadow: inset 0 2px 10px hsla(0, 0%, 0%, 0.5);
+#leave-queue {
+    display: none;
 }
